@@ -520,7 +520,7 @@ bool CGUIEditBox::processKey(const SEvent& event)
 			{
 				s32 cp = CursorPos - BrokenTextPositions[lineNo];
 				if ((s32)BrokenText[lineNo-1].size() < cp)
-					CursorPos = BrokenTextPositions[lineNo-1] + (s32)BrokenText[lineNo-1].size()-1;
+					CursorPos = BrokenTextPositions[lineNo-1] + core::max_((u32)1, BrokenText[lineNo-1].size())-1;
 				else
 					CursorPos = BrokenTextPositions[lineNo-1] + cp;
 			}
@@ -551,7 +551,7 @@ bool CGUIEditBox::processKey(const SEvent& event)
 			{
 				s32 cp = CursorPos - BrokenTextPositions[lineNo];
 				if ((s32)BrokenText[lineNo+1].size() < cp)
-					CursorPos = BrokenTextPositions[lineNo+1] + BrokenText[lineNo+1].size()-1;
+					CursorPos = BrokenTextPositions[lineNo+1] + core::max_((u32)1, BrokenText[lineNo+1].size())-1;
 				else
 					CursorPos = BrokenTextPositions[lineNo+1] + cp;
 			}
@@ -1135,7 +1135,7 @@ void CGUIEditBox::breakText()
 			s32 whitelgth = font->getDimension(whitespace.c_str()).Width;
 			s32 worldlgth = font->getDimension(word.c_str()).Width;
 
-			if (WordWrap && length + worldlgth + whitelgth > elWidth)
+			if (WordWrap && length + worldlgth + whitelgth > elWidth && line.size() > 0)
 			{
 				// break to next line
 				length = worldlgth;
